# flux

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: FluxConfig.cmake.in
docs/: pdcursesmod_problem.md
fx/: main.cpp  theme_loader.cpp  theme_loader.h
fx/config/: config.toml
fx/config/themes/: ayudark.toml  catppuccin-mocha.toml  deepnight.toml  gruvbox-dark.toml  monokai-pro.toml  onedark.toml  palenight.toml  solarized-dark.toml  tokyo-night.toml
fx/include/: config_loader.hpp  file_opener.hpp  input_prompt.hpp  theme_loader.h  theme_loader.hpp
fx/include/ui/: icon_provider.hpp  notification.hpp  renderer.hpp  theme.hpp  theme_selector.hpp
fx/src/: file_opener.cpp  input_prompt.cpp  theme_loader.cpp
fx/src/ui/: icon_provider.cpp  notification.cpp  renderer.cpp  theme.cpp  theme_selector.cpp
fx/themes/: dracula.toml  nord.toml  tokyo-night.toml
include/: flux.h
include/flux/core/: browser.h  file_clipboard.h
include/flux/ui/: README.md  icon_provider.h  renderer.h  theme.h
src/core/: browser.cpp  file_clipboard.cpp
src/ui/: icon_provider.cpp  renderer.cpp  theme.cpp
